--- a/style.css
+++ b/style.css
@@ -1,6 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
+
 body{
     background-color: rgb(20, 20, 20);
     font-family: "Orbitron", sans-serif;
+    width: 100%;
+    height: 100%;
+    padding: 0%;
+    margin: 0%;
+
 
         
 }
@@ -12,6 +21,8 @@ li{
 header{
     position: relative;
     font-size: larger;
+    width: 100%;
+    height: 100%;
     
     
 }
@@ -25,8 +36,8 @@ a:link, a:visited, a:active{
 
 .navbar{
     
-    width: 100%;
-    height: 100%;
+    
+    
     display: flex;
     align-items: center;
     justify-content: center;
@@ -37,6 +48,9 @@ a:link, a:visited, a:active{
 }
 
 .nombre {
+    font-size: 125%;
+    width: 5em;
+    height: 1.2em;
     margin: 47px;
     color: aqua;
     
@@ -57,8 +71,8 @@ a:link, a:visited, a:active{
 
 .foto_perfil{
     
-    width:70px;
-    height: 70px;
+    width: 3em;
+    height: 3em;
     border-radius: 150px;
     border: 2px solid snow;
     box-shadow: 1px 1px 1px 0 rgb(122, 221, 102), 4px 1px 16px 1px rgb(92, 162, 235);
@@ -71,7 +85,7 @@ a:link, a:visited, a:active{
     gap: 50px;
 }
 
-.container{
+div.container{
     border-radius: 10px;
     width: 100%;
     height: 100%;
@@ -87,21 +101,90 @@ a:link, a:visited, a:active{
 }
 
 .correo{
-    padding: px;
+    width: 20%;
+    margin: auto;
+    padding: 1%;
+    
     display: flex;
+    background-color: rgb(0, 0, 0);
     justify-content: center;
-    border: aqua;
     border-radius: 20px;
     font-weight: bold;
     cursor: pointer;
     font-size: 0.8rem;
 }
 
-.text_1{
-color: rgb(23, 66, 23);
-font-size: 55px;
+.rgb{
+    position: relative;
+width: 620px;
+height: 142px;
+display: flex;
+-ms-align-items: center;
+align-items: center;
+
+
+border-radius: 35px;
+box-shadow: 0 20px 35px rgb(0, 0, 0);
+overflow: hidden;
 
 }
+
+
+
+.rgb h1{  
+text-shadow: 3px 3px black;
+position: relative;
+margin-left: 20px;
+
+color: rgb(4, 112, 201);
+font-size: 55px;
+z-index: 2;
+
+
+
+  
+
+
+
+}
+
+.rgb::before{
+    content: '';
+    position: absolute;
+    height: 100px;
+    width: 650px;
+    background: linear-gradient(#00ccff, #d500f9);
+    
+    animation: rotate 4s linear
+    infinite;
+    
+
+}
+
+.rgb::after{
+    content: '';
+    position: absolute;
+    background: rgb(20, 20, 20);
+    inset: 5px;
+    border-radius: 30px;
+    
+
+
+}
+
+@keyframes rotate {
+
+    from{
+        transform: rotate(0deg);
+    }
+    to{
+        transform: rotate(360deg);
+    }
+
+
+
+}
+
 .text_2{
 font-size: 40px;
 
